--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -2,3 +2,29 @@
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     padding: 1.2rem 0px;
 }
+
+.btn-regular {
+  background: #FF4742;
+  border: 1px solid #FF4742;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  color: #FFFFFF;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 16px;
+  min-height: 40px;
+  padding: 12px 14px;
+  text-align: center;
+  transition: all 0.2s linear;
+}
+
+.btn-regular:hover,
+.btn-regular:active {
+  background-color: initial;
+  background-position: 0 0;
+  color: #FF4742;
+}
+
+.btn-regular:active {
+  opacity: .5;
+}
